Add queue names

--- a/stacks/shared-announce.yml
+++ b/stacks/shared-announce.yml
@@ -290,6 +290,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_series_create
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederSeriesCreateDeadletterQueue.Arn
@@ -351,6 +352,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_series_delete
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederSeriesDeleteDeadletterQueue.Arn
@@ -412,6 +414,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_series_update
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederSeriesUpdateDeadletterQueue.Arn
@@ -473,6 +476,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_create
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryCreateDeadletterQueue.Arn
@@ -534,6 +538,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_delete
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryDeleteDeadletterQueue.Arn
@@ -595,6 +600,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_publish
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryPublishDeadletterQueue.Arn
@@ -656,6 +662,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_unpublish
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryUnpublishDeadletterQueue.Arn
@@ -717,6 +724,7 @@ Resources:
     Properties:
       DelaySeconds: 0
       MessageRetentionPeriod: 604800 # 7 days
+      QueueName: !Sub ${AWS::StackName}_${EnvironmentTypeAbbreviation}_announce_feeder_story_update
       ReceiveMessageWaitTimeSeconds: 0
       RedrivePolicy:
         deadLetterTargetArn: !GetAtt FeederStoryUpdateDeadletterQueue.Arn
